--- a/index.html
+++ b/index.html
@@ -24,14 +24,22 @@
 </head>
 <body class="bg-black text-white font-sans antialiased scroll-smooth overflow-x-hidden">
 
-  <!-- 🔝 Sticky Category Bar -->
+  <!-- 🔝 Sticky Header + Logo + Categories -->
   <header class="w-full sticky top-0 z-50 bg-black/90 backdrop-blur shadow">
-    <nav class="max-w-7xl mx-auto px-4 py-2 flex flex-wrap justify-center gap-4 md:gap-10 text-base md:text-lg font-semibold tracking-wide">
-      <a href="#home"        class="hover:text-primary transition">Koti</a>
-      <a href="#sports"      class="hover:text-primary transition">Urheilu</a>
-      <a href="#fashion"     class="hover:text-primary transition">Muoti</a>
-      <a href="#electronics" class="hover:text-primary transition">Elektroniikka</a>
-    </nav>
+    <div class="max-w-7xl mx-auto px-4 py-2 flex items-center justify-between">
+      <!-- Visible logo left side -->
+      <a href="#hero" class="flex items-center gap-2 group">
+        <img src="laatukampe.png" alt="Laatukampe logo" class="h-10 md:h-12 w-auto group-hover:opacity-90 transition" loading="lazy">
+      </a>
+
+      <!-- Category nav -->
+      <nav class="flex flex-wrap justify-center gap-4 md:gap-10 text-lg md:text-xl font-semibold tracking-wide">
+        <a href="#home"        class="hover:text-primary transition">Koti</a>
+        <a href="#sports"      class="hover:text-primary transition">Urheilu</a>
+        <a href="#fashion"     class="hover:text-primary transition">Muoti</a>
+        <a href="#electronics" class="hover:text-primary transition">Elektroniikka</a>
+      </nav>
+    </div>
   </header>
 
   <!-- 🖼️ HERO -->
@@ -51,18 +59,18 @@
     <div class="max-w-7xl mx-auto px-4 py-12 grid gap-8 md:grid-cols-3 text-center">
       <div class="flex flex-col items-center">
         <svg xmlns="http://www.w3.org/2000/svg" class="h-10 w-10 text-primary mb-3" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" /></svg>
-        <h3 class="font-semibold mb-1">100 % luotettavat kaupat</h3>
-        <p class="text-sm text-gray-400">Kaikki kumppanit tarkistettu käsin.</p>
+        <h3 class="font-semibold mb-1">Luotettavat kumppanit</h3>
+        <p class="text-sm text-gray-400">Kaikki kaupat tarkistettu käsin.</p>
       </div>
       <div class="flex flex-col items-center">
         <svg xmlns="http://www.w3.org/2000/svg" class="h-10 w-10 text-primary mb-3" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 7h18M3 12h18m-8 5h8" /></svg>
         <h3 class="font-semibold mb-1">Parhaat hinnat</h3>
-        <p class="text-sm text-gray-400">Päivitämme hinnat päivittäin, jotta saat aina diilin.</p>
+        <p class="text-sm text-gray-400">Hinnoittelu päivittyy päivittäin.</p>
       </div>
       <div class="flex flex-col items-center">
         <svg xmlns="http://www.w3.org/2000/svg" class="h-10 w-10 text-primary mb-3" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8v4l3 3" /></svg>
-        <h3 class="font-semibold mb-1">Nopea toimitus</h3>
-        <p class="text-sm text-gray-400">Suosimme kumppaneita, jotka toimittavat 24‑48 h.</p>
+        <h3 class="font-semibold mb-1">Nopeat toimitukset</h3>
+        <p class="text-sm text-gray-400">Useimmat tuotteet 24–48 h.</p>
       </div>
     </div>
   </section>
@@ -114,4 +122,4 @@
         <p>Suomen luotettavin affiliate‑tarjoussivusto vuodesta 2025.</p>
         <div class="flex gap-4 pt-2">
           <a href="https://www.instagram.com/laatukampe/" target="_blank" rel="noopener" class="hover:text-primary transition" aria-label="Instagram">
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" class="h-8 w-8 fill-current"><path d="M12 2.163c3.204 0 3.584.012 4.849.07 1.366.062 2.633.343 3.608 1.319.975.975 1.257 2.242 1.319 3.608.058 1.265.069 1.645.069 4.84 0 3.196-.012 3.577-.07 4.842-.062 1.366-.344 2.633-1.319 3.608-.975.975-2.242 1.257-3.608 1.319-1.265.058-1.645.069-4.849.069-3.204 0-3.584-.012-4.849-.07-1.366-.062-2.633-.344-3.608-1.319-.975-.975-1.257-2.242-1.319-3.608C2.175 15.58 2.163 15.2 2.163 12c0-3.196.012-3.577.07-4.842.062-1.366.344-2.633 1.319-3.608C4.528 2.576 5.795 2.294 7.161 2.232 8.426 2.175 8.806 2.163 12 2.163z"/><path d="M12 5.838a6.162 6.162 0 1 0 0 12.324 6.162 6.162 0 0 0 0-12.324zm0 10.162a3.999 3.999 0 1 1 0-7.998 3.999 3.999 0 0 1 0 7.998z"/><circle cx="18.406" cy="5.594" r
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24
