--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
     <div class="relative z-10 text-center px-4 max-w-2xl">
       <h1 class="text-4xl md:text-7xl font-extrabold leading-tight mb-6">Laadukkaat tuotteet <span class="text-primary">ilman kompromisseja</span></h1>
-      <p class="text-gray-300 md:text-xl mb-8">Säästä aikaa ja rahaa – me seulomme puolestasi parhaat diilit eri tuoteryhmistä.</p>
+      <p class="text-gray-300 md:text-xl mb-8">Säästä aikaa ja rahaa – me seulomme puolestasi ajankohtaisimmat ja parhaat diilit eri tuoteryhmistä.</p>
       <a href="#deals" class="inline-block bg-primary text-black font-bold px-8 py-4 rounded-2xl shadow-lg hover:shadow-primary/50 hover:-translate-y-[2px] transition">Selaa tarjouksia</a>
     </div>
   </section>
@@ -70,7 +70,7 @@
       <div class="flex flex-col items-center">
         <svg xmlns="http://www.w3.org/2000/svg" class="h-10 w-10 text-primary mb-3" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8v4l3 3" /></svg>
         <h3 class="font-semibold mb-1">Nopeat toimitukset</h3>
-        <p class="text-sm text-gray-400">Useimmat tuotteet 24–48 h.</p>
+        <p class="text-sm text-gray-400">Useimmat tuotteet 24–72 h.</p>
       </div>
     </div>
   </section>
@@ -78,8 +78,7 @@
   <!-- 🔥 Deals Carousel -->
   <section id="deals" class="bg-gray-900 py-16">
     <div class="max-w-7xl mx-auto px-4 text-center">
-      <h2 class="text-3xl md:text-5xl font-bold mb-4">🔥 Kuumat diilit juuri nyt</h2>
-      <p class="text-gray-300 md:text-lg mb-10">Päivitetty <span id="updatedDate"></span></p>
+      <h2 class="text-3xl md:text-5xl font-bold mb-4">Kuumat diilit juuri nyt</h2>
 
       <div id="dealsCarousel" class="flex gap-6 overflow-x-auto snap-x md:snap-none pb-4 scrollbar-thin scrollbar-thumb-gray-700/70 scrollbar-track-gray-800/60">
         <!-- Example card -->
@@ -87,8 +86,8 @@
           <div class="h-40 sm:h-48 bg-gray-200 rounded-xl mb-3 flex items-center justify-center">
             <span class="text-gray-500">Kuva</span>
           </div>
-          <h3 class="font-semibold text-lg">Tuote 1</h3>
-          <p class="text-sm text-gray-600">Lyhyt kuvaus</p>
+          <h3 class="font-semibold text-lg">BobCat - Rallipenkki</h3>
+          <p class="text-sm text-gray-600">puolinahkainen ja ilmastoitu, laadukkaat tikkaukset</p>
           <div class="flex items-baseline gap-2 mt-3">
             <p class="text-xl font-bold">€199</p>
             <span class="text-sm line-through text-gray-400">€249</span>
@@ -104,7 +103,7 @@
   <!-- 📣 Newsletter CTA -->
   <section id="newsletter" class="bg-primary text-black py-16 text-center">
     <div class="max-w-2xl mx-auto px-4">
-      <h2 class="text-3xl md:text-4xl font-bold mb-4">Liity VIP‑listalle ja nappaa -10 % seuraavasta ostoksesta</h2>
+      <h2 class="text-3xl md:text-4xl font-bold mb-4">Liity VIP‑listalle ja saat nopeiten uusimmat laatutarjoukset!</h2>
       <p class="mb-8 text-gray-800">Saat ensimmäisenä sähköpostiisi uudet diilit ja eksklusiiviset kupongit.</p>
       <form class="flex flex-col sm:flex-row gap-4 justify-center">
         <input type="email" placeholder="Sähköpostisi" required class="flex-1 px-4 py-3 rounded-xl placeholder-gray-500 focus:outline-none">
@@ -119,7 +118,6 @@
       <!-- About & Social -->
       <div class="space-y-4">
         <img src="laatukampe.png" alt="Laatukampe logo" class="h-24">
-        <p>Suomen luotettavin affiliate‑tarjoussivusto vuodesta 2025.</p>
         <div class="flex gap-4 pt-2">
           <a href="https://www.instagram.com/laatukampe/" target="_blank" rel="noopener" class="hover:text-primary transition" aria-label="Instagram">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24
